@@ -2,26 +2,26 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-	<groupId>SPQ1718-BSPQ18-E3</groupId>
-	<artifactId>RentalCars</artifactId>
+	<groupId>RentalCar</groupId>
+	<artifactId>RentalCarJDORMI</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>RentalCars</name>
+	<name>RentalCarJDORMI</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<server.IP>127.0.0.1</server.IP>
 		<server.port>1099</server.port>
-		<server.Name>MessengerRMIDAO</server.Name>
+		<server.Name>RentalCarServer</server.Name>
 		<policy.file>${basedir}/src/main/resources/security/java.policy</policy.file>
 		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
 	</properties>
 
 	<!-- search for the latest version of dependencies in http://mvnrepository.com -->
 	<dependencies>
-      <dependency>
+		 <dependency>
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-core</artifactId>
             <version>[5.1.6, 5.9)</version>
@@ -36,12 +36,12 @@
             <artifactId>datanucleus-rdbms</artifactId>
             <version>[5.1.6, 5.9)</version>
         </dependency>
-        <dependency>
+       <dependency>     
             <groupId>org.datanucleus</groupId>
             <artifactId>javax.jdo</artifactId>
             <version>[3.2.0-m8, )</version>
         </dependency>
-		 <dependency>
+		<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.45</version>
@@ -52,66 +52,43 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.databene</groupId>
-			<artifactId>contiperf</artifactId>
-			<version>2.2.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		 	<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
-  		  	<version>2.18.0</version>   	
-		</dependency>
-		<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-           <version>1.2.17</version>
-			<scope>compile</scope>
-        </dependency>
-		<dependency>
+		  <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.6.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.4</version>
-		</dependency>
+		</dependency> 
 		<dependency>
-    <groupId>net.sourceforge.cobertura</groupId>
-    <artifactId>cobertura</artifactId>
-    <version>2.1.1</version>
-    <scope>test</scope>
-</dependency>
-	</dependencies>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>[1.2.17, )</version>
+        </dependency>
+        
+    </dependencies>
  
   <build>
          <plugins>
             <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
-                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
 					<encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-           
-            <plugin>
-               <groupId>org.datanucleus</groupId>
+              <plugin>
+				<groupId>org.datanucleus</groupId>
                 <artifactId>datanucleus-maven-plugin</artifactId>
                 <version>5.0.2</version>
                 <configuration>
+                    <log4jConfiguration>${config.files.dir}/log4j.properties</log4jConfiguration>
                     <verbose>true</verbose>
-                    <props>datanucleus.properties</props>
+                    <props>${config.files.dir}/datanucleus.properties</props>
                 </configuration>
                 <executions>
                     <execution>
@@ -123,97 +100,8 @@
                 </executions>
             </plugin>
 			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.21.0</version>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<formats>
-						<format>xml</format>
-						<format>html</format>
-					</formats> 
-				 <instrumentation>
-					 <!-- This line is for skipping set/get and constructor trivial methods. The coverage is higher-->
-					  <ignoreTrivial>true</ignoreTrivial>  
-						<excludes>
-							<exclude>es/deusto/client/*.class</exclude>
-							<exclude>es/deusto/server/Server.class</exclude>
-							<exclude>es/deusto/server/**/I*.*</exclude>
-							
-							<!-- This lines is for excluding from the instrumentation and the coverage calculations all the classes from server down							
-							<exclude>es/deusto/server/**/*</exclude> 
-							-->
-					
-						</excludes>
-				  </instrumentation>
-					<check>
-						<branchRate>50</branchRate>
-						<lineRate>60</lineRate>
-						<haltOnFailure>true</haltOnFailure>
-						<totalBranchRate>50</totalBranchRate>
-						<totalLineRate>60</totalLineRate>
-						<packageLineRate>50</packageLineRate>
-						<packageBranchRate>50</packageBranchRate>
-						<regexes>
-							<!--
-							<regex>
-								<pattern>com.example.boringcode.*</pattern>
-								<branchRate>40</branchRate>
-								<lineRate>30</lineRate>
-							</regex>
-							-->
-						</regexes>
-					</check>
-				</configuration>
-			</plugin>
         </plugins>
      </build>
-     
-     <reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.9</version>
-			</plugin>
-			<plugin>			
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.0.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version> 
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jdepend-maven-plugin</artifactId>
-				<version>2.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.21.0</version>
-			</plugin>
-			<plugin>
-				<groupId>com.googlecode.maven-overview-plugin</groupId>
-				<artifactId>maven-overview-plugin</artifactId>
-				<version>1.6</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>dashboard-maven-plugin</artifactId>
-				<version>1.0.0-beta-1</version>
-			</plugin>
-		</plugins>
-	</reporting>
 		
 	<profiles> 
 		<!-- run as 'mvn exec:java -Pserver' -->
@@ -253,13 +141,6 @@
 						<artifactId>exec-maven-plugin</artifactId>  
 						<version>1.2.1</version>  
 						<configuration>  
-								<fork>true</fork>
-									<forkedVmArgs>
-										<!-- Disable verifier to avoid issues with Java 7 verifier and code          
-										instrumentation -->
-										<forkedVmArg>-Xverify:none</forkedVmArg>
-									</forkedVmArgs>
-												
 									<mainClass>es.deusto.server.Server</mainClass>
 									<systemProperties>
 										
@@ -334,6 +215,5 @@
             <url>http://www.datanucleus.org/downloads/maven2/</url>
         </pluginRepository>
     </pluginRepositories>
-	
 	
 </project>
